# BonVivant

./: .env.example  .gitignore  6-3.ipynb  BACKTEST_README.md  CLAUDE.md  HantuStock.py  MODULARIZATION_COMPLETE.md  MODULAR_BACKTEST_README.md  NEWS_BACKTEST_README.md  NEWS_CRAWLER_UPDATE.md  NEWS_STRATEGY_README.md  README.md  STRATEGY_CONFIG_GUIDE.md  STRATEGY_MODULE_README.md  STRATEGY_SETTINGS_QUICK_GUIDE.md  TECHNICAL_OPTIMIZATION_README.md  ai_performance_check.py  backtest_engine.py  benchmark_backtest.py  config.yaml  crontab.ipynb  main.py  pyproject.toml  repair_purchase_info.py  run_modular_backtest.py  run_news_backtest.py  run_technical_optimization.py  strategy.py  strategy_data.json  test_ai_strategy.py  test_modular_backtest.py  test_strategy.py  train_ai_model.py
docs/: small_capital_backtest_analysis.md
docs/history/: 2024-12-30_ai_score_to_hybrid_score_refactoring.md
hanlyang_stock/: __init__.py
hanlyang_stock/analysis/: __init__.py  ai_model.py  ai_price_prediction_model.txt  news_sentiment.py  news_sentiment_backup.py  technical.py
hanlyang_stock/analysis/crawlers/: README.md  __init__.py  mk_economy_crawler.py  multi_source_crawler.py  naver_finance_crawler.py  news_crawler_base.py  news_crawler_factory.py
hanlyang_stock/backtest/: __init__.py  data_validator.py  engine.py  performance.py  portfolio.py
hanlyang_stock/config/: backtest_settings.py  settings.py  strategy_settings.py
hanlyang_stock/data/: __init__.py  backtest_fetcher.py  fetcher.py  preprocessor.py
hanlyang_stock/history/: README.md
hanlyang_stock/strategy/: __init__.py  backtester.py  executor.py  news_based_selector.py  selector.py
hanlyang_stock/utils/: __init__.py  data_validator.py  notification.py  storage.py
(+12 files in other folders)
