[project]
name = "hanlyang-stock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.54.0",
    "beautifulsoup4>=4.12.0",
    "finance-datareader>=0.9.96",
    "imbalanced-learn==0.11.0",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "numpy==1.24.3",
    "pandas>=2.0.0,<2.3.0",
    "pandas-stubs==2.2.3.250527",
    "pykrx>=1.0.51",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "scikit-learn==1.3.0",
    "selenium>=4.23.0",
    "slack-sdk>=3.35.0",
    "ta>=0.11.0",
    "timedelta>=2020.12.3",
    "webdriver-manager>=4.0.2",
]
